# prefect-data-pipeline

./: .gitignore  README.md  cookiecutter.json  dependencies.json  init_project.py  templates.json
template_1/{{ cookiecutter.project_slug }}/: main.py  prefect.toml  pyproject.toml
template_1/{{ cookiecutter.project_slug }}/core/config/: path.py
template_1/{{ cookiecutter.project_slug }}/core/libs/: utils.py
template_1/{{ cookiecutter.project_slug }}/core/processing/: ingestion.py  orchestration.py  (+1 more)
template_1/{{ cookiecutter.project_slug }}/prefect/: logging.yml  prefect.yaml
template_1/{{ cookiecutter.project_slug }}/prefect_config/: deploy.sh  prefect.yaml
template_1/{{ cookiecutter.project_slug }}/setup/: cleanup.sh  install_dependencies.sh  setup.sh
template_2/: cookiecutter.json
template_2/{{ cookiecutter.project_slug }}/: prefect.toml  pyproject.toml
template_2/{{ cookiecutter.project_slug }}/core/libs/: utils.py
template_2/{{ cookiecutter.project_slug }}/core/processing/: ingestion.py  transform.py
template_2/{{ cookiecutter.project_slug }}/data/processed/: rockets_launches_stats.parquet
template_2/{{ cookiecutter.project_slug }}/data/raw/: rockets_launches.parquet
template_2/{{ cookiecutter.project_slug }}/setup/: cleanup.sh  setup.sh
template_3/: cookiecutter.json
template_3/{{ cookiecutter.project_slug }}/: Makefile  create_db.sql  pyproject.toml  setup_postegre.sh
template_3/{{ cookiecutter.project_slug }}/core/config/: schemas.yaml
template_3/{{ cookiecutter.project_slug }}/core/libs/: db_utils.py  utils.py
template_3/{{ cookiecutter.project_slug }}/core/processing/: ingestion.py  orchestration.py  transform.py
template_3/{{ cookiecutter.project_slug }}/dbt_project/: dbt_project.yml  profiles.yml
template_3/{{ cookiecutter.project_slug }}/dbt_project/models/: schema.yml
template_3/{{ cookiecutter.project_slug }}/dbt_project/models/marts/: mart_rocket_launches_by_country.sql
template_3/{{ cookiecutter.project_slug }}/dbt_project/models/staging/: stg_rockets.sql
template_3/{{ cookiecutter.project_slug }}/prefect/: deploy.sh  prefect.yaml
template_3/{{ cookiecutter.project_slug }}/setup/: README.md  cleanup.sh  create_table.sql  delete_db.sql  init_database.sh  install_dependencies.sh  install_postgresql.sh  run.sh  setup.sh
{{ cookiecutter.project_slug }}/: main.py  prefect.toml  pyproject.toml
{{ cookiecutter.project_slug }}/core/config/: path.py
{{ cookiecutter.project_slug }}/core/libs/: utils.py
{{ cookiecutter.project_slug }}/core/processing/: ingestion.py  transform.py
{{ cookiecutter.project_slug }}/data/sources/: github_repo.csv
