[project]
name = "{{ cookiecutter.project_slug }}"
version = "1.0.0"
description = "{{ cookiecutter.project_name }}"
authors = [{ name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" }]
requires-python = ">= 3.9"


[tool.pixi.workspace]
# Comment linux-aarch64 beacause the dbt-core fail to install
platforms = ["linux-64", "osx-arm64", "win-64"]
channels = ["conda-forge", "default"]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}

[tool.pixi.dependencies]
pyyaml = "*"
questionary = "*"
prefect=">=3.3.0,<4"
dbt-core=">=1.9.0,<2"
dbt-postgres=">=1.9.0,<2"
pyarrow=">=19.0,<20"
pandas=">=2.2.3,<3"
numpy=">=2.2.4,<3"
psycopg2="*"
sqlalchemy=">=2.0.0,<3"

[tool.pixi.pypi-dependencies]
prefect-dbt=">=0.6.0,<1"

# [tool.pixi.feature.test.dependencies]
# pytest = "~=7.4.0"

# [tool.pixi.feature.dev.dependencies]
# black = "~=23.9.1"

[tool.pixi.tasks]
setup = "python scripts/setup_env.py"